# cornelis

./: .clang-format  CMakeLists.txt  LICENSE  README.md
include/cornelis/: Camera.hpp  Color.hpp  Expects.hpp  FrameBuffer.hpp  Geometry.hpp  Linalg.hpp  Materials.hpp  Math.hpp  NanoVDBMath.hpp  Objects.hpp  PRNG.hpp  Random.hpp  Render.hpp  RenderOptions.hpp  Sampling.hpp  Scene.hpp  SceneDescription.hpp  SoA.hpp  Span.hpp  Tiles.hpp
src/: CMakeLists.txt  Camera.cpp  Color.cpp  FrameBuffer.cpp  Geometry.cpp  Linalg.cpp  Materials.cpp  NanoVDBMath.cpp  Objects.cpp  Random.cpp  Render.cpp  Scene.cpp  SceneDescription.cpp  Thread.hpp  Tiles.cpp  cornelis.cpp
tests/: CMakeLists.txt  MathHelpers.hpp  test_Camera.cpp  test_Color.cpp  test_FrameBuffer.cpp  test_Geometry.cpp  test_Linalg.cpp  test_Math.cpp  test_Random.cpp  test_Sampling.cpp  test_Scene.cpp  test_SceneDescription.cpp  test_SoA.cpp  test_Tiles.cpp
